<resources>
    <string name="app_name">Bornbhukkad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rail_restro_menu">Food Menu</string>
    <string name="checkout">Checkout</string>
    <string name="date_format">yy-mm-dd</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="hour_format">hh:mm</string>

    <string name="welcome">Welcome To Bornbhukkad</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dont_have_account">New User ? <a>Click here</a> </string>
    <string name="title_activity_testing">Testing</string>
    <string name="security_answer_hint">Enter your answer</string>
    <string name="forgot_password_text">Forgot password ? <a>Click here</a></string>
    <string name="volley_exception_message">Some network issue is detected. Please try again after some time. Sorry for cause inconvenience to you.</string>
    <string name="volley_exception_title">Network Error</string>
    <string name="account_existence_checking">Verifying your details...</string>
    <string name="already_registered">Already Registered</string>
    <string name="server_error_title">Server Error</string>
    <string name="server_error_message">Please try again after some time. Thank you.</string>
    <string name="edit_profile">Edit</string>
    <string name="new_password">New Password</string>
    <string name="save">save</string>
    <string name="want_to_change_password">Change Password? Click here</string>
    <string name="dont_change_password">Don\'t wan\'t to change password? Click here.</string>
    <string name="empty_field_message">Please make sure that you have provided value to every fields. Thank you.</string>
    <string name="empty_field_title">Empty Fields</string>
    <string name="password_mismatch_title">Password Mismatch</string>
    <string name="password_mismatch_heading">The password you entered does\'t match. Please try again. Thank you.</string>

    <string name="facebook_app_id">150167765589188</string>
    <string name="fb_login_protocol_scheme">fb150167765589188</string>

    <string name="com_facebook_loginview_log_in_button">Login</string>
    <string name="non_veg">Non-Veg</string>
    <string name="rupee_symbol">\u20B9</string>
</resources>
