<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="@dimen/normal_margin"
    android:padding="5dp"
    facebook:cardElevation="@dimen/normal_margin"
    tools:context="com.yomorning.lavafood.yomorning.user.EditProfile">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:padding="@dimen/normal_padding">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:background="@drawable/edit_text_rounded_border"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/edit_text_rounded_border"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:background="@drawable/edit_text_rounded_border"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="14sp"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CHANGE PASSWORD"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/colorBlack"
                    android:background="@color/backgroundColor"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_text_rounded_border"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/new_password"
                        android:background="@drawable/edit_text_rounded_border"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/re_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:background="@drawable/edit_text_rounded_border"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"
                        android:paddingBottom="8dp"
                        android:paddingEnd="8dp"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="14sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_width="@dimen/buttonWidth"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_shape"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="@string/want_to_change_password"
                android:layout_marginTop="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/normal_padding"
                android:padding="@dimen/normal_padding"
                android:textSize="12sp"/>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
